objects/APTS_Export_Bulk_Upload_Format__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>R3-MR1-Req.6140-This field is used for export workspace content to bulk upload format.</description>
    <fields>
        <fullName>APTS_Column_Width__c</fullName>
        <description>As part of QFA-R3-MR1 Req. 6140, Export Bulk Upload Format in .xls file</description>
        <label>APTS Column Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <description>R3-MR1-Req.6140-This field is created for exporting bulk upload format functionality and sequence the header in bulk upload file.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSV_Header__c</fullName>
        <description>R3-MR1-Req.6140-This field is created for exporting bulk upload format functionality</description>
        <label>CSV Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Export Bulk Upload Format</label>
</CustomObject>